# badge-generator-be

./: .gitignore  README.md  config.py  dependencies.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_badge-generator-api.yml
badge_generator_be/: add_text_to_pic.py  merge_pic_to_file.py
